package main

// Attack Command Integration Tests for Schema-Based Targets
//
// This file contains comprehensive integration tests for the refactored attack command
// that uses schema-based target types instead of URL positional arguments.
//
// Test Coverage:
// 1. Attack with stored target (--target flag)
// 2. Attack with inline target (--type and --connection flags)
// 3. Rejection of URL positional argument with helpful error message
// 4. Rejection when agent doesn't support the target type
// 5. Schema validation errors for malformed connection parameters
// 6. Missing or incomplete target specification
// 7. Non-existent stored target
//
// Prerequisites:
// - Tasks 9-10 must be complete (attack command refactored with --target flag)
// - SDK tasks 1, 3, 5 complete (TargetSchema, TargetInfo.Connection, proto updates)
//
// These tests validate Requirements 3 and 4 from the schema-based-targets spec:
// - Req 3: Refactored Attack Command with --target or --type/--connection
// - Req 4: Agent Target Schema Declaration and validation

import (
	"bytes"
	"context"
	"errors"
	"path/filepath"
	"testing"

	"github.com/spf13/cobra"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"github.com/zero-day-ai/gibson/cmd/gibson/component"
	"github.com/zero-day-ai/gibson/internal/attack"
	"github.com/zero-day-ai/gibson/internal/database"
	"github.com/zero-day-ai/gibson/internal/finding"
	"github.com/zero-day-ai/gibson/internal/mission"
	"github.com/zero-day-ai/gibson/internal/payload"
	"github.com/zero-day-ai/gibson/internal/registry"
	"github.com/zero-day-ai/gibson/internal/types"
	"github.com/zero-day-ai/sdk/schema"
	sdktypes "github.com/zero-day-ai/sdk/types"
)

// errNotFound is a sentinel error for not found cases in tests
var errNotFound = errors.New("not found")

// TestAttackCommand_StoredTarget tests attack command with --target flag (stored target)
func TestAttackCommand_StoredTarget(t *testing.T) {
	// Create test database
	db, cleanup := createTestDatabase(t)
	defer cleanup()

	// Create a stored target in the database
	targetDAO := database.NewTargetDAO(db)
	storedTarget := &types.Target{
		ID:   types.NewID(),
		Name: "my-api",
		Type: "http_api",
		Connection: map[string]any{
			"url":    "https://api.example.com",
			"method": "POST",
		},
		Status: types.TargetStatusActive,
	}
	err := targetDAO.Create(context.Background(), storedTarget)
	require.NoError(t, err)

	// Create mock components
	mockRegistry := newMockRegistry()
	mockAgent := newMockAgent("test-agent", []sdktypes.TargetSchema{
		createHTTPAPISchema(),
	})
	mockRegistry.registerAgent(mockAgent)

	// Set up command context with registry
	// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
	ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
		registry: mockRegistry,
	})

	// Create command and execute
	cmd := createAttackCommand()
	cmd.SetContext(ctx)
	cmd.SetArgs([]string{
		"--target", "my-api",
		"--agent", "test-agent",
	})

	// Execute command
	var buf bytes.Buffer
	cmd.SetOut(&buf)
	err = cmd.Execute()

	// Verify command succeeded
	assert.NoError(t, err, "attack command should succeed with stored target")

	// Verify the target was resolved correctly
	// (In real implementation, we'd check that the agent received the correct connection params)
}

// TestAttackCommand_InlineTarget tests attack command with --type and --connection flags (inline target)
func TestAttackCommand_InlineTarget(t *testing.T) {
	// Create test database
	_, cleanup := createTestDatabase(t)
	defer cleanup()

	// Create mock components
	mockRegistry := newMockRegistry()
	mockAgent := newMockAgent("test-agent", []sdktypes.TargetSchema{
		createHTTPAPISchema(),
	})
	mockRegistry.registerAgent(mockAgent)

	// Set up command context
	// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
	ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
		registry: mockRegistry,
	})

	// Create command and execute with inline target
	cmd := createAttackCommand()
	cmd.SetContext(ctx)
	cmd.SetArgs([]string{
		"--type", "http_api",
		"--connection", `{"url":"https://api.example.com","method":"POST"}`,
		"--agent", "test-agent",
	})

	// Execute command
	var buf bytes.Buffer
	cmd.SetOut(&buf)
	err := cmd.Execute()

	// Verify command succeeded
	assert.NoError(t, err, "attack command should succeed with inline target")
}

// TestAttackCommand_RejectURLPositional tests rejection of URL positional argument
func TestAttackCommand_RejectURLPositional(t *testing.T) {
	// Create test database
	_, cleanup := createTestDatabase(t)
	defer cleanup()

	// Create mock registry
	mockRegistry := newMockRegistry()
	// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
	ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
		registry: mockRegistry,
	})

	// Create command and execute with URL positional argument
	cmd := createAttackCommand()
	cmd.SetContext(ctx)
	cmd.SetArgs([]string{
		"https://api.example.com", // URL positional argument (deprecated)
		"--agent", "test-agent",
	})

	// Execute command
	var buf bytes.Buffer
	cmd.SetOut(&buf)
	cmd.SetErr(&buf)
	err := cmd.Execute()

	// Verify command failed with helpful error
	require.Error(t, err, "attack command should reject URL positional argument")

	// Check error message is helpful
	errMsg := err.Error()
	assert.Contains(t, errMsg, "--target", "error should mention --target flag")
	assert.Contains(t, errMsg, "--type", "error should mention --type flag")
	assert.Contains(t, errMsg, "--connection", "error should mention --connection flag")
	assert.Contains(t, errMsg, "URL positional argument is no longer supported",
		"error should explain that URL positional arg is deprecated")
}

// TestAttackCommand_AgentTypeNotSupported tests rejection when agent doesn't support target type
func TestAttackCommand_AgentTypeNotSupported(t *testing.T) {
	// Create test database
	_, cleanup := createTestDatabase(t)
	defer cleanup()

	// Create mock agent that only supports kubernetes targets
	mockRegistry := newMockRegistry()
	mockAgent := newMockAgent("k8s-agent", []sdktypes.TargetSchema{
		createKubernetesSchema(),
	})
	mockRegistry.registerAgent(mockAgent)

	// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
	ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
		registry: mockRegistry,
	})

	// Try to attack with http_api target (agent doesn't support it)
	cmd := createAttackCommand()
	cmd.SetContext(ctx)
	cmd.SetArgs([]string{
		"--type", "http_api",
		"--connection", `{"url":"https://api.example.com"}`,
		"--agent", "k8s-agent",
	})

	// Execute command
	var buf bytes.Buffer
	cmd.SetOut(&buf)
	cmd.SetErr(&buf)
	err := cmd.Execute()

	// Verify command failed
	require.Error(t, err, "attack command should reject incompatible target type")

	// Check error message is helpful
	errMsg := err.Error()
	assert.Contains(t, errMsg, "does not support", "error should mention incompatibility")
	assert.Contains(t, errMsg, "http_api", "error should mention the unsupported type")
	assert.Contains(t, errMsg, "kubernetes", "error should list supported types")
}

// TestAttackCommand_SchemaValidationError tests schema validation errors
func TestAttackCommand_SchemaValidationError(t *testing.T) {
	tests := []struct {
		name       string
		targetType string
		connection string
		wantErrMsg string
	}{
		{
			name:       "missing required field",
			targetType: "http_api",
			connection: `{"method":"POST"}`, // missing required "url"
			wantErrMsg: "url",
		},
		{
			name:       "invalid JSON",
			targetType: "http_api",
			connection: `{invalid json}`,
			wantErrMsg: "invalid JSON",
		},
		{
			name:       "wrong field type",
			targetType: "http_api",
			connection: `{"url":12345}`, // url should be string, not number
			wantErrMsg: "type",
		},
		{
			name:       "empty connection",
			targetType: "http_api",
			connection: `{}`,
			wantErrMsg: "required",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// Create test database
			_, cleanup := createTestDatabase(t)
			defer cleanup()

			// Create mock agent
			mockRegistry := newMockRegistry()
			mockAgent := newMockAgent("test-agent", []sdktypes.TargetSchema{
				createHTTPAPISchema(),
			})
			mockRegistry.registerAgent(mockAgent)

			// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
			ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
				registry: mockRegistry,
			})

			// Create command with invalid connection
			cmd := createAttackCommand()
			cmd.SetContext(ctx)
			cmd.SetArgs([]string{
				"--type", tt.targetType,
				"--connection", tt.connection,
				"--agent", "test-agent",
			})

			// Execute command
			var buf bytes.Buffer
			cmd.SetOut(&buf)
			cmd.SetErr(&buf)
			err := cmd.Execute()

			// Verify command failed with validation error
			require.Error(t, err, "attack command should fail with invalid connection")
			assert.Contains(t, err.Error(), tt.wantErrMsg,
				"error message should mention the validation issue")
		})
	}
}

// TestAttackCommand_MissingTargetFlags tests error when neither --target nor --type/--connection provided
func TestAttackCommand_MissingTargetFlags(t *testing.T) {
	// Create test database
	_, cleanup := createTestDatabase(t)
	defer cleanup()

	mockRegistry := newMockRegistry()
	// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
	ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
		registry: mockRegistry,
	})

	// Create command without target specification
	cmd := createAttackCommand()
	cmd.SetContext(ctx)
	cmd.SetArgs([]string{
		"--agent", "test-agent",
	})

	// Execute command
	var buf bytes.Buffer
	cmd.SetOut(&buf)
	cmd.SetErr(&buf)
	err := cmd.Execute()

	// Verify command failed
	require.Error(t, err, "attack command should fail without target")
	assert.Contains(t, err.Error(), "--target", "error should mention --target flag")
}

// TestAttackCommand_IncompleteInlineTarget tests error when only --type or --connection provided
func TestAttackCommand_IncompleteInlineTarget(t *testing.T) {
	tests := []struct {
		name string
		args []string
	}{
		{
			name: "only type",
			args: []string{"--type", "http_api", "--agent", "test-agent"},
		},
		{
			name: "only connection",
			args: []string{"--connection", `{"url":"https://api.example.com"}`, "--agent", "test-agent"},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// Create test database
			_, cleanup := createTestDatabase(t)
			defer cleanup()

			mockRegistry := newMockRegistry()
			// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
			ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
				registry: mockRegistry,
			})

			// Create command with incomplete inline target
			cmd := createAttackCommand()
			cmd.SetContext(ctx)
			cmd.SetArgs(tt.args)

			// Execute command
			var buf bytes.Buffer
			cmd.SetOut(&buf)
			cmd.SetErr(&buf)
			err := cmd.Execute()

			// Verify command failed
			require.Error(t, err, "attack command should fail with incomplete inline target")
			assert.Contains(t, err.Error(), "--type", "error should mention --type flag")
			assert.Contains(t, err.Error(), "--connection", "error should mention --connection flag")
		})
	}
}

// TestAttackCommand_StoredTargetNotFound tests error when stored target doesn't exist
func TestAttackCommand_StoredTargetNotFound(t *testing.T) {
	// Create test database
	_, cleanup := createTestDatabase(t)
	defer cleanup()

	mockRegistry := newMockRegistry()
	// Note: We use context.WithValue directly because WithRegistryManager expects *registry.Manager
	ctx := context.WithValue(context.Background(), component.RegistryManagerKey{}, &mockRegistryManager{
		registry: mockRegistry,
	})

	// Create command with non-existent target
	cmd := createAttackCommand()
	cmd.SetContext(ctx)
	cmd.SetArgs([]string{
		"--target", "non-existent-target",
		"--agent", "test-agent",
	})

	// Execute command
	var buf bytes.Buffer
	cmd.SetOut(&buf)
	cmd.SetErr(&buf)
	err := cmd.Execute()

	// Verify command failed
	require.Error(t, err, "attack command should fail with non-existent target")
	assert.Contains(t, err.Error(), "not found", "error should mention target not found")
	assert.Contains(t, err.Error(), "non-existent-target", "error should mention the target name")
}

// Helper functions

// createTestDatabase creates a temporary test database
func createTestDatabase(t *testing.T) (*database.DB, func()) {
	t.Helper()
	tempDir := t.TempDir()
	dbPath := filepath.Join(tempDir, "test.db")
	db, err := database.Open(dbPath)
	require.NoError(t, err)

	err = db.InitSchema()
	require.NoError(t, err)

	cleanup := func() {
		db.Close()
	}

	return db, cleanup
}

// createAttackCommand creates a fresh attack command for testing
func createAttackCommand() *cobra.Command {
	// Return the actual attack command
	// Note: This would need to be the refactored attack command from tasks 9-10
	return attackCmd
}

// Mock implementations for testing

// mockRegistry implements registry.ComponentDiscovery for testing
type mockRegistry struct {
	agents map[string]*mockAgentInfo
}

func newMockRegistry() *mockRegistry {
	return &mockRegistry{
		agents: make(map[string]*mockAgentInfo),
	}
}

func (m *mockRegistry) registerAgent(agent *mockAgentInfo) {
	m.agents[agent.name] = agent
}

func (m *mockRegistry) ListAgents(ctx context.Context) ([]registry.AgentInfo, error) {
	infos := make([]registry.AgentInfo, 0, len(m.agents))
	for _, agent := range m.agents {
		infos = append(infos, registry.AgentInfo{
			Name:         agent.name,
			Version:      agent.version,
			Capabilities: agent.capabilities,
			Instances:    1,
		})
	}
	return infos, nil
}

func (m *mockRegistry) GetAgent(ctx context.Context, name string) (registry.AgentInfo, error) {
	agent, ok := m.agents[name]
	if !ok {
		return registry.AgentInfo{}, errNotFound
	}
	return registry.AgentInfo{
		Name:         agent.name,
		Version:      agent.version,
		Capabilities: agent.capabilities,
		Instances:    1,
	}, nil
}

func (m *mockRegistry) Close() error {
	return nil
}

// mockAgentInfo represents a mock agent for testing
type mockAgentInfo struct {
	name          string
	version       string
	capabilities  []string
	targetSchemas []sdktypes.TargetSchema
}

func newMockAgent(name string, schemas []sdktypes.TargetSchema) *mockAgentInfo {
	return &mockAgentInfo{
		name:          name,
		version:       "1.0.0",
		capabilities:  []string{"test"},
		targetSchemas: schemas,
	}
}

// mockRegistryManager implements component.RegistryManager for testing
type mockRegistryManager struct {
	registry *mockRegistry
}

func (m *mockRegistryManager) Registry() interface{} {
	return m.registry
}

func (m *mockRegistryManager) Start(ctx context.Context) error {
	return nil
}

func (m *mockRegistryManager) Stop(ctx context.Context) error {
	return nil
}

func (m *mockRegistryManager) Health(ctx context.Context) error {
	return nil
}

// Schema creation helpers

// createHTTPAPISchema creates a test HTTP API schema
func createHTTPAPISchema() sdktypes.TargetSchema {
	return sdktypes.TargetSchema{
		Type:        "http_api",
		Version:     "1.0",
		Description: "HTTP API target",
		Schema: schema.Object(map[string]schema.JSON{
			"url": schema.JSON{
				Type:        "string",
				Description: "Target URL",
			},
			"method": schema.JSON{
				Type: "string",
				Enum: []any{"GET", "POST", "PUT", "DELETE"},
			},
			"headers": schema.JSON{
				Type: "object",
			},
			"timeout": schema.JSON{
				Type: "integer",
			},
		}, "url"),
	}
}

// createKubernetesSchema creates a test Kubernetes schema
func createKubernetesSchema() sdktypes.TargetSchema {
	return sdktypes.TargetSchema{
		Type:        "kubernetes",
		Version:     "1.0",
		Description: "Kubernetes cluster target",
		Schema: schema.Object(map[string]schema.JSON{
			"cluster": schema.JSON{
				Type:        "string",
				Description: "Cluster name or kubeconfig context",
			},
			"namespace": schema.JSON{
				Type:    "string",
				Default: "default",
			},
			"kubeconfig": schema.JSON{
				Type:        "string",
				Description: "Path to kubeconfig file",
			},
			"api_server": schema.JSON{
				Type:        "string",
				Description: "API server URL",
			},
		}, "cluster"),
	}
}

// Mock runner and stores

// mockAttackRunner implements attack.AttackRunner for testing
type mockAttackRunner struct {
	runFunc func(ctx context.Context, opts *attack.AttackOptions) (*attack.AttackResult, error)
}

func (m *mockAttackRunner) Run(ctx context.Context, opts *attack.AttackOptions) (*attack.AttackResult, error) {
	if m.runFunc != nil {
		return m.runFunc(ctx, opts)
	}
	return &attack.AttackResult{
		Status:   attack.AttackStatusSuccess,
		Findings: []finding.EnhancedFinding{},
	}, nil
}

// mockMissionStore implements mission.MissionStore for testing
type mockMissionStore struct{}

func (m *mockMissionStore) Save(ctx context.Context, mis *mission.Mission) error {
	return nil
}

func (m *mockMissionStore) Update(ctx context.Context, mis *mission.Mission) error {
	return nil
}

func (m *mockMissionStore) Get(ctx context.Context, id types.ID) (*mission.Mission, error) {
	return nil, errNotFound
}

func (m *mockMissionStore) GetByName(ctx context.Context, name string) (*mission.Mission, error) {
	return nil, errNotFound
}

func (m *mockMissionStore) List(ctx context.Context, filter *mission.MissionFilter) ([]*mission.Mission, error) {
	return nil, nil
}

// mockFindingStore implements finding.FindingStore for testing
type mockFindingStore struct{}

func (m *mockFindingStore) Store(ctx context.Context, f finding.EnhancedFinding) error {
	return nil
}

func (m *mockFindingStore) Get(ctx context.Context, id types.ID) (*finding.EnhancedFinding, error) {
	return nil, errNotFound
}

func (m *mockFindingStore) List(ctx context.Context, missionID types.ID, filter *finding.FindingFilter) ([]finding.EnhancedFinding, error) {
	return nil, nil
}

func (m *mockFindingStore) Update(ctx context.Context, f finding.EnhancedFinding) error {
	return nil
}

func (m *mockFindingStore) Delete(ctx context.Context, id types.ID) error {
	return nil
}

// mockPayloadRegistry implements payload.PayloadRegistry for testing
type mockPayloadRegistry struct{}

func (m *mockPayloadRegistry) GetPayloadsByCategory(ctx context.Context, category string) ([]*payload.Payload, error) {
	return nil, nil
}

func (m *mockPayloadRegistry) GetPayloadsByTechnique(ctx context.Context, techniqueID string) ([]*payload.Payload, error) {
	return nil, nil
}

func (m *mockPayloadRegistry) GetPayload(ctx context.Context, id string) (*payload.Payload, error) {
	return nil, errNotFound
}
